css/style.css
.container {
    max-width: 900px;
    padding-top: 20px;
    padding-bottom: 50px;
    font-family: 'Montserrat', sans-serif;
}

.header {

}

.avatar {
    max-width: 200px;
}

.header-details {
    margin-left: 220px;
}

h1 {
    font-weight: bold;
}

h2:after
{
    content:' ';
    display:block;
    border:1px solid black;
}

h2 {
    margin-top: 20px;
}

h3 {
    padding-top: 15px;
    font-variant: small-caps;
}

.publications {
    padding: 0;
    list-style-type: none;
}

.publications li {
    margin-bottom: 20px;
}

.author {
    font-weight: bold;
}

